unpackaged/main/default/objects/CAPA_Effectiveness_Check__c/CAPA_Effectiveness_Check__c.object-meta.xml
<CustomObject>
    <label>CAPA Effectiveness Check</label>
    <nameField>
        <displayFormat>CAPA-EC-{00000}</displayFormat>
        <label>CAPA Effectiveness Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPA Effectiveness Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>