unpackaged/main/default/objects/CAPA_Effectiveness_Check__c/fields/CAPA__c.field-meta.xml
<CustomField>
        <fullName>CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
        <relationshipLabel>CAPA Effectiveness Checks</relationshipLabel>
        <relationshipName>CAPA_Effectiveness_Checks</relationshipName>
        <type>Lookup</type>
    </CustomField>