unpackaged/main/default/objects/CAPA_Effectiveness_Check__c/fields/CAPA_ParentWorkFlowStatus__c.field-meta.xml
<CustomField>
        <fullName>CAPA_ParentWorkFlowStatus__c</fullName>
        <formula>CAPA__r.CMPL123_WF_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA_ParentWorkFlowStatus</label>
        <type>Text</type>
    </CustomField>